# library-management-api

./: .env  .gitignore  Dockerfile  PR_DESCRIPTION.md  README.md  docker-compose.yml  library_fixture.json  manage.py  pyproject.toml  requirements.txt  setup.cfg
library_service/: settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_date_joined_and_more.py
